DTO: configure DTOs in all the category handlers (#14)
